--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^7.3.1",
     "@react-native-firebase/auth": "^8.0.8",
     "@react-native-firebase/firestore": "^7.2.2",
+    "@react-navigation/bottom-tabs": "^5.8.0",
+    "@react-navigation/drawer": "^5.9.0",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "react": "16.11.0",
     "react-native": "0.62.2",
     "react-native-elements": "^2.0.3",
@@ -26,7 +31,8 @@
     "react-native-webview": "^10.3.2",
     "react-navigation": "4.3.9",
     "react-navigation-drawer": "2.3.3",
-    "react-navigation-stack": "1.10.2"
+    "react-navigation-stack": "1.10.2",
+    "react-navigation-tabs": "^2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.3",
